tests/NormalTests/paczka1/small_fuzzy/67158149.err
Error in line 1: MwXwQvGmt6 A!36 61,6
Error in line 9: A436 A823 20,2
Error in line 14: yF1Ze S288 50,14
